--- a/config/boards/arm/bt60/bt60_defconfig
+++ b/config/boards/arm/bt60/bt60_defconfig
@@ -28,7 +28,7 @@ CONFIG_FLASH_MAP=y
 CONFIG_SPI=y
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=y
-CONFIG_ZMK_RGB_UNDERGLOW_ON_START=y
+CONFIG_ZMK_RGB_UNDERGLOW_ON_START=n
 CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=262
 # Use the STRIP config specific to the LEDs you're using
 CONFIG_WS2812_STRIP=y
@@ -37,3 +37,6 @@ CONFIG_PWM=y
 CONFIG_LED_PWM=y
 CONFIG_ZMK_BACKLIGHT=y
 CONFIG_BUILD_OUTPUT_UF2=y
+CONFIG_ZMK_IDLE_TIMEOUT=15000
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_IDLE_SLEEP_TIMEOU=90000
