--- a/config/boards/arm/bt60/bt60_defconfig
+++ b/config/boards/arm/bt60/bt60_defconfig
@@ -38,6 +38,6 @@ CONFIG_LED_PWM=y
 CONFIG_ZMK_BACKLIGHT=y
 CONFIG_BUILD_OUTPUT_UF2=y
 
-CONFIG_ZMK_SLEEP=n
+CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_TIMEOUT=30000
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1200000
